Feat(Responsive): Responsive design added to the portfolio content

--- a/src/components/index/Index.css
+++ b/src/components/index/Index.css
@@ -13,6 +13,7 @@
 .index-title
 {
   font-size: 2.5rem;
+  filter: drop-shadow(0 0 0.5rem #1F51FF);
 }
 
 .index-list
@@ -24,4 +25,34 @@
 .index-list > li
 {
   padding: 15px;
+}
+
+.index-element
+{
+  cursor: pointer;
+  filter: drop-shadow(0 0 0.5rem #1F51FF);
+
+  transition: all 0.5s ease;
+}
+
+.index-element:hover
+{
+  color: #fff;
+
+  .line
+  {
+    width: 100px;
+    border-top: 1px solid #fff;
+  }
+}
+
+.line
+{
+  border-top: 1px solid #1F51FF;
+  width: 50px;
+  display: inline-block;
+  margin-right: 5px;
+  margin-bottom: 10px;
+
+  transition: all 0.5s ease;
 }
