--- a/src/components/content/contacts/Contacts.css
+++ b/src/components/content/contacts/Contacts.css
@@ -1,4 +1,28 @@
 .skills.contacts
 {
-  margin: 15% 0;
+  margin: 10% 0 30% 0;
+}
+
+.section-title
+{
+  filter: drop-shadow(0 0 0.5rem #1F51FF);
+}
+
+.contact-list
+{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 15%;
+  list-style: none;
+}
+
+.contact-list img
+{
+  width: 70px;
+  cursor: pointer;
+}
+
+.contact-list img:hover
+{
+  filter: drop-shadow(0 0 0.3rem aquamarine);
 }
