--- a/src/components/parallax/Parallax.css
+++ b/src/components/parallax/Parallax.css
@@ -30,7 +30,9 @@
 
 .parallax_layer_0
 {
-  transform: translateZ(-150px) scale(2.5);
+  position: absolute;
+  top: -150px;
+  transform: translateZ(-150px) scale(2.2);
 }
 
 .parallax_layer_1
